--- a/Marcu_Adrian_LAB2/Marcu_Adrian_LAB2.csproj
+++ b/Marcu_Adrian_LAB2/Marcu_Adrian_LAB2.csproj
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <Compile Remove="Models\Class.cs" />
+    <Compile Remove="Pages\Index.cshtml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="Pages\Index.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
